Fixed form centering and logout button aligning

--- a/src/djgap/static/djgap/css/courses.css
+++ b/src/djgap/static/djgap/css/courses.css
@@ -84,6 +84,8 @@ ul li {
     margin-left: 250px;
     margin-top: 25px;
     margin-bottom: 30px;
+    float: right;
+    margin-right: 5px;
 }
 
 .logout span {
